# proof-market-toolchain

./: .clang-format  .dockerignore  .gitbook.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.toolchain  Makefile  README.md  arithmetic.json  build.sh  docker-compose.yml  requirements.txt
.github/: filters.yml
.github/workflows/: docker.yml  set_version_tag.yml
example/: CMakeLists.txt  arithmetic_example_statement.json  auth.json  proof_generate.cpp  proof_generate.hpp  test_plonk_component.hpp
example/circuit_serialization/: unified_addition.cpp
example/data/: field_mul.json  field_mul_public_params.json  non_native_variable_base_public_params.json  unified_addition.json  unified_addition_public_params.json
example/input/arithmetic/: input.json
example/input/arithmetic_example/: input.json
example/input/mina/: circuit.json
example/input/mina/account/: input.json
example/input/mina/state_data/: input.json  state.json
example/proofs/statements/: 32292.txt
example/public_params_serialization/: unified_addition.cpp
example/serialization/: ec_index_terms.hpp  field_mul.cpp  mina_aux_state.cpp  non_native_variable_base.cpp  solana_state.cpp  solana_state_batch.cpp  unified_addition.cpp
example/statements/: arithmetic.json  arithmetic_example_statement.json  mina_account.json  mina_ledger.json  mina_statement.json  statement_example.json
example/worker/: worker_settings.json
example/zkllvm/circuits/: arithmetics_example.ll  poseidon_example.ll  sha256_example.ll
gitbook-docs/: README.md  SUMMARY.md
gitbook-docs/developers/: proofs.md  statements.md
gitbook-docs/evm/: endpoint.md  verifier.md
gitbook-docs/examples/: toolchain.md
gitbook-docs/examples/mina-example/: README.md  part-1-setup.md  part-2-deploy-zkapp.md  part-3-proof-request.md  part-4-validate-proof.md
gitbook-docs/getting-started/: environment-setup.md  installation.md  portal-overview.md
gitbook-docs/guides/: environment-setup.md  installation.md  portal-overview.md
gitbook-docs/guides-1/: requester-producer-flow.md
gitbook-docs/guides-1/mina-proof-pipeline-example/: 1.-setup.md  2.-deploy-zkapp.md  3.-proof-request.md  4.-validate-proof.md  README.md
gitbook-docs/guides/end-to-end-flow/: README.md  circuit-developer.md
gitbook-docs/guides/installation/: README.md  authentication.md  proof-market-tool-chain.md
gitbook-docs/market/: command-line.md  economics.md  front-end.md  mechanics.md  overview.md  supported-proof-systems.md  web-interface.md
gitbook-docs/market/cmd-reference/: README.md  ask.md  bid.md  proof.md  statement.md  user.md
gitbook-docs/market/end-to-end-flow/: README.md  proof-generator.md  proof-producer.md  proof-requester.md
gitbook-docs/market/user-guides/: README.md  circuit-developer.md  proof-producer.md  proof-requester.md  sign-up.md
gitbook-docs/market/user-role-guides/: README.md  authentication.md  circuit-developer.md  proof-producer.md  (+1 more)
gitbook-docs/misc/: code-of-conduct.md  contact.md
gitbook-docs/producers/: proof-producer.md
gitbook-docs/toolchain/: installation.md  sign-up.md
scripts/: .secret  aggregated_request.py  ask_get.py  ask_push.py  ask_tools.py  auth.json  auth_tools.py  bid_get.py  bid_push.py  bid_tools.py  circuit_get.py  circuits_get.py  circuits_push.py  constants.py  get_top.py  jwt_get.py  order_get.py  order_push.py  prepare_circuit.py  prepare_env.sh  prepare_statement.py  proof_get.py  proof_get_bid_id.py  proof_get_id.py  proof_push.py  proof_tools.py  proposal_push.py  proposal_select.py  proposal_tools.py  public_input_get.py  request_tools.py  signup.py  statement_get.py  statement_push.py  statement_tools.py  worker_get.py  worker_push.py
scripts/bid_pusher/: bid_loop.py
scripts/build_scripts/: Dockerfile  prepare_docker.sh
scripts/proof_producer/: .auth.json  README.md  constants.py  proof  proof-producer.service  proof.table  proof_generators.ini  proof_producer.py
scripts/pytest/: auth_tools_test.py  proof_tools_test.py  proposal_tools_test.py  request_tools_test.py  signup_test.py  statement_tools_test.py
scripts/request_pusher/: Dockerfile  request_loop.py
test/: CMakeLists.txt  proof_generate.cpp  serialization.cpp  test_plonk_component.hpp
(+18 files in other folders)
